--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,107 +1,125 @@
 :root {
-  --max-width: 1100px;
-  --border-radius: 12px;
-  --font-mono: ui-monospace, Menlo, Monaco, 'Cascadia Mono', 'Segoe UI Mono',
-    'Roboto Mono', 'Oxygen Mono', 'Ubuntu Monospace', 'Source Code Pro',
-    'Fira Mono', 'Droid Sans Mono', 'Courier New', monospace;
+  /* --dark: #283739; */
+  /* --dark: #191919; */
+  --dark: #050301;
+  --dark-lighter: #0c0905;
+  --dark-green: #2C5D63;
+  --light-green: #A9C52F;
+  --white: #F5F5F5;
 
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+  /* --test: #0e3b3b; */
+  --test: #0b3232;
+  /* --sample: #46c1b0; */
+  /* --sample: #216259; */
+  --sample: #1a4e47;
+  --green: #55fc75;
 
-  --primary-glow: conic-gradient(
-    from 180deg at 50% 50%,
-    #16abff33 0deg,
-    #0885ff33 55deg,
-    #54d6ff33 120deg,
-    #0071ff33 160deg,
-    transparent 360deg
-  );
-  --secondary-glow: radial-gradient(
-    rgba(255, 255, 255, 1),
-    rgba(255, 255, 255, 0)
-  );
 
-  --tile-start-rgb: 239, 245, 249;
-  --tile-end-rgb: 228, 232, 233;
-  --tile-border: conic-gradient(
-    #00000080,
-    #00000040,
-    #00000030,
-    #00000020,
-    #00000010,
-    #00000010,
-    #00000080
-  );
+  /* for responsivness */
+  --card-size: 320px;
+  --card-margin: 20px;
 
-  --callout-rgb: 238, 240, 241;
-  --callout-border-rgb: 172, 175, 176;
-  --card-rgb: 180, 185, 188;
-  --card-border-rgb: 131, 134, 135;
+  --pagination-margin: 24px;
+
+  --highlight-sm: 0 0 12px 8px var(--sample);
+  --highlight-md: 0 0 24px 16px var(--sample);
+
+  /* font sizes */
+  /* mobile - major second */
+  --major-2-xs: 13px;
+  --major-2-sm: 14px;
+  --major-2-md: 16px;
+  --major-2-lg: 18px;
+  --major-2-xl: 20px;
+  --major-2-xxl: 23px;
+  --major-2-giant: 26px;
+
+   /* other - major third */
+   --major-3-xs: 11px;
+   --major-3-sm: 13px;
+   --major-3-md: 16px;
+   --major-3-lg: 20px;
+   --major-3-xl: 25px;
+   --major-3-xxl: 31px;
+   --major-3-giant: 39px;
+
+
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-
-    --primary-glow: radial-gradient(rgba(1, 65, 255, 0.4), rgba(1, 65, 255, 0));
-    --secondary-glow: linear-gradient(
-      to bottom right,
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0.3)
-    );
-
-    --tile-start-rgb: 2, 13, 46;
-    --tile-end-rgb: 2, 5, 19;
-    --tile-border: conic-gradient(
-      #ffffff80,
-      #ffffff40,
-      #ffffff30,
-      #ffffff20,
-      #ffffff10,
-      #ffffff10,
-      #ffffff80
-    );
-
-    --callout-rgb: 20, 20, 20;
-    --callout-border-rgb: 108, 108, 108;
-    --card-rgb: 100, 100, 100;
-    --card-border-rgb: 200, 200, 200;
-  }
-}
-
-* {
-  box-sizing: border-box;
-  padding: 0;
-  margin: 0;
+#app {
+  /* box-sizing: border-box; */
+  height: 100%;
 }
 
 html,
 body {
-  max-width: 100vw;
-  overflow-x: hidden;
+  /* box-sizing: border-box; */
+  position: relative;
+  height: 100%;
 }
 
 body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  background: var(--dark);
+  font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
+  font-size: 14px;
+  color: #000;
+  margin: 0;
+  padding: 0;
 }
 
-a {
-  color: inherit;
-  text-decoration: none;
+.swiper {
+  width: 100%;
+  height: 100%;
 }
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
+.swiper-slide {
+  text-align: center;
+  font-size: 18px;
+  /* background: var(--white); */
+
+  /* Center slide text vertically */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.cardSwiper {
+  position: relative;
+}
+
+.cardSwiper .swiper-slide {
+  align-items: flex-start;
+}
+
+.swiper-slide img {
+  display: block;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.cardSwiper .swiper-pagination {
+  bottom: 0px;
+  display: none;
+}
+
+.swiper-pagination-bullet {
+  background: var(--green);
+}
+
+.non-visible {
+  visibility: hidden;
+}
+
+.display-none {
+  display: none;
+}
+
+@media screen and (max-width: 768px) {
+
+  /* disable swiper pagination in smaller devices */
+  .mainSwiper>.swiper-pagination {
+    display: none;
   }
 }
+
