--- a/src/components/home/home.css
+++ b/src/components/home/home.css
@@ -29,11 +29,19 @@
 
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%);
+
     /* transform: translateY(var(--_translation_y)); */
     /* filter: opacity(0.8); */
 
 
+}
+
+.circle-desktop {
+    transform: translate(-50%, -50%);
+}
+
+.circle-mobile {
+    transform: translate(-50%, -55%);
 }
 
 .home--poster {
@@ -86,6 +94,13 @@
 
 }
 
+.home img {
+    display: block;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
 .home--image img {
     filter: brightness(1.1);
 
@@ -133,6 +148,10 @@
     color: var(--green);
     /* !!! test */
     /* filter: opacity(0.6); */
+}
+
+.top--left .logo {
+    width: 80px;
 }
 
 .top--right {
@@ -202,6 +221,7 @@
     color: var(--green);
 }
 
+@media screen and (max-width: 1280px) {}
 
 @media screen and (max-width: 768px) {
 
@@ -235,8 +255,7 @@
         width: var(--photo-size); */
     }
 
-    .home--circle {
-        transform: translate(-50%, -55%);
+    .top--left .logo {
+        width: 60px;
     }
-
 }
