--- a/src/components/card/card.css
+++ b/src/components/card/card.css
@@ -20,7 +20,7 @@
     box-shadow: var(--highlight-sm);
 }
 
-.card img {
-    height: 100%;
-    width: 100%;
+.card-image {
+    height: 110%;
+    width: 110%;
 }
