--- a/src/components/project/project.css
+++ b/src/components/project/project.css
@@ -13,7 +13,7 @@
     /* height: calc(100% - (var(--card-margin))); */
     /* height: calc(100% - (var(--card-margin) + var(--pagination-margin))); */
 
-height: 100%;
+    height: 100%;
 
     overflow: hidden;
 }
@@ -23,7 +23,7 @@ height: 100%;
     /* transform: rotate(-1deg); */
     /* margin: 0; */
     margin: 20px 0;
-    cursor: pointer;
+    /* cursor: pointer; */
 }
 
 .project--name {
@@ -38,12 +38,41 @@ height: 100%;
     overflow: hidden;
     /* text-overflow: ellipsis; */
 
+    font-size: var(--major-2-md);
+
+    /* !!! to decide */
+    text-align:start;
 }
 
-.project--desc:hover {
-    background-color: aqua;
-}
+/* .desc-mobile {
+    cursor: pointer;
+    pointer-events: none;
+} */
 
-.swipe {
+/* .swipe {
     color: var(--green);
+} */
+
+.read-more {
+    display: flex;
+    /* align-items: center; */
+    justify-content: center;
+    gap: 4px;
+    width: fit-content;
 }
+
+.read-more--icon {
+    /* font-size: var(--major-2-md); */
+    width: 16px;
+    /* height: 16px; */
+}
+
+.expand-text {
+    /* color: var(--light-green); */
+    color: var(--green);
+    white-space: nowrap;
+}
+
+/* .expand-text:hover {
+    text-decoration: underline;
+} */
