--- a/src/components/about/about.css
+++ b/src/components/about/about.css
@@ -1,4 +1,3 @@
-
 .about {
     height: 100vh;
     width: 100%;
@@ -6,16 +5,23 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    
+
+    /* overflow: hidden; */
+
 }
 
 .about-container {
+    position: relative;
     display: flex;
     /* flex-direction: row; */
     align-items: center;
-    justify-content: space-between;
+    justify-content: center;
 
-/* gap: 24px; */
+    flex-direction: column;
+
+    gap: 20px;
+
+    /* gap: 24px; */
 
     /* height: 600px;
     width: var(--card-size); */
@@ -35,21 +41,27 @@
 
     /* border-radius: 15%; */
 
-    
+    overflow: hidden;
 }
 
 .about-center {
     display: flex;
     flex-direction: column;
-    align-items: center;
+    align-items: left;
     /* gap: calc(var(--card-margin) * 2); */
     /* margin: 24px; */
 
     /* height: 100%; */
+
+    /* overflow: hidden; */
+
+    width: 60%;
 }
 
-.about-center>*{
-    margin: var(--card-margin);
+.about-center>* {
+    margin: var(--card-margin) 0;
+
+    /* overflow: hidden; */
 }
 
 .about-center a {
@@ -58,16 +70,20 @@
 
 }
 
-.about-center h1,p {
+.about-center h1,
+p {
     /* margin: 0; */
 }
 
 .about-center button {
-padding: 0 16px;
+    /* padding: 0 16px; */
+    padding: 0 24px;
+    margin: auto;
 }
 
 .something-about {
     color: var(--white);
+    text-align: left;
 
 }
 
@@ -78,4 +94,100 @@ padding: 0 16px;
 .about-sides i {
     color: var(--green);
     font-size: 24px;
+}
+
+
+.mobile-icons {
+    position: relative;
+    /* overflow: hidden; */
+    /* justify-content: center; */
+    /* align-items: flex-end; */
+    /* justify-content: center; */
+    height: 40px;
+}
+
+
+.mobile-icons i {
+    color: var(--green);
+    /* height: 32px; */
+    font-size: 32px;
+    margin-right: 12px;
+}
+
+/* .mobile-icons::after {
+    content: "";
+    position: absolute;
+    z-index: 99;
+    left: 0;
+    top: 0;
+    background-color: black;
+    width: 20%;
+    height: 100%;
+}
+
+.mobile-icons::before {
+    content: "";
+    position: absolute;
+    right: 0;
+    top: 0;
+    background-color: aliceblue;
+    width: 20%;
+    height: 100%;
+} */
+
+.about-bottom {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+}
+
+.about-bottom-overlay-left,
+.about-bottom-overlay-right {
+    position: absolute;
+    z-index: 99;
+    bottom: 4%;
+    width: 50%;
+    height: 60px;
+}
+
+/* .about-bottom-overlay-left {
+    left: 0;
+    background: linear-gradient(to right, #030000, var(--dark) 25%, transparent 95%);
+}
+
+.about-bottom-overlay-right {
+    right: 0;
+    background: linear-gradient(to left, var(--dark) 15%, transparent 95%);
+} */
+
+
+@media screen and (min-height: 1024px) {
+    .mobile-icons {
+        height: 60px;
+    }
+
+
+    .mobile-icons i {
+        font-size: 48px;
+        margin-right: 24px;
+    }
+
+    .about-bottom-overlay-left,
+    .about-bottom-overlay-right {
+        height: 90px;
+    }
+
+
+    .about-center {
+        width: 60%;
+    }
+
+}
+
+@media screen and (max-width: 800px) {
+
+    .about-center {
+        width: 80%;
+    }
+
 }
