--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -57,21 +57,19 @@ html,
 body {
   /* box-sizing: border-box; */
   position: relative;
-  height: calc(100% + 1px);
-  width: calc(100% + 1px);
+  height: 100%;
+  width: 100%;
 }
 
 body {
-  /* background: rgb(0,8,3); */
-  background: radial-gradient(circle, rgba(0,8,3,1) 0%, rgba(5,3,1,1) 25%, rgba(3,0,0,1) 100%);
-  /* background-size: 101% 101%; */
+  background: var(--dark);
   font-size: 14px;
-  /* color: red; */
   margin: 0;
   padding: 0;
 }
 
 .swiper {
+  background: radial-gradient(circle, rgba(0,8,3,1) 0%, rgba(5,3,1,1) 25%, rgba(3,0,0,1) 110%);
   width: 100%;
   height: 100%;
 }
