--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -69,9 +69,12 @@ body {
 }
 
 .swiper {
-  background: radial-gradient(circle, rgba(0,8,3,1) 0%, rgba(5,3,1,1) 25%, rgba(3,0,0,1) 110%);
   width: 100%;
   height: 100%;
+}
+
+.mainSwiper {
+  background: radial-gradient(circle, rgba(0,8,3,1) 0%, rgba(5,3,1,1) 25%, rgba(3,0,0,1) 110%);
 }
 
 .swiper-slide {
@@ -136,6 +139,14 @@ body {
 
 .display-none {
   display: none;
+}
+
+@media screen and (max-width: 1024px) {
+
+  /* disable swiper pagination in smaller devices */
+  .mainSwiper>.swiper-pagination {
+    display: none;
+  }
 }
 
 @media screen and (max-width: 1024px) {
