--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -74,7 +74,7 @@ body {
 }
 
 .mainSwiper {
-  background: radial-gradient(circle, rgba(0,8,3,1) 0%, rgba(5,3,1,1) 25%, rgba(3,0,0,1) 110%);
+  background: radial-gradient(circle, rgba(0, 8, 3, 1) 0%, rgba(5, 3, 1, 1) 25%, rgba(3, 0, 0, 1) 110%);
 }
 
 .swiper-slide {
@@ -91,6 +91,10 @@ body {
 .cardSwiper {
   position: relative;
   overflow: visible;
+}
+
+.cardSwiper .swiper-wrapper {
+  overflow: hidden;
 }
 
 .cardSwiper .swiper-slide {
@@ -141,27 +145,30 @@ body {
   display: none;
 }
 
-@media screen and (max-width: 1024px) {
+/* @media screen and (max-width: 1024px) {
 
-  /* disable swiper pagination in smaller devices */
+
+  .mainSwiper>.swiper-pagination {
+    display: none;
+  }
+} */
+
+@media screen and (orientation: portrait), (hover: none), (hover: on-demand), (-moz-touch-enabled: 1), (pointer:coarse) {
   .mainSwiper>.swiper-pagination {
     display: none;
   }
 }
 
-@media screen and (max-width: 1024px) {
-
-  /* disable swiper pagination in smaller devices */
-  .mainSwiper>.swiper-pagination {
+@media screen and (orientation: landscape) {
+  .cardSwiper>.swiper-pagination {
     display: none;
   }
 }
 
-@media screen and (min-width: 1024px) and (min-height: 620px) {
+/* @media screen and (min-width: 1024px) and (min-height: 620px) {
 
   .cardSwiper .swiper-pagination {
-    /* bottom: -30px; */
     display: none;
   }
 
-}
+} */
