--- a/src/components/card/card.css
+++ b/src/components/card/card.css
@@ -20,6 +20,15 @@
     box-shadow: var(--highlight-sm);
 }
 
+.card a {
+    display: flex;
+    /* width: 100%; */
+    /* height: 100%; */
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+}
+
 .card-image {
     height: 110%;
     width: 110%;
