--- a/src/components/project/project.css
+++ b/src/components/project/project.css
@@ -38,10 +38,20 @@
     overflow: hidden;
     /* text-overflow: ellipsis; */
 
-    font-size: var(--major-2-md);
+    line-height: 1.3;
+    font-size: var(--text-md);
 
     /* !!! to decide */
-    text-align:start;
+    text-align: start;
+}
+
+.project p {
+    font-size: var(--text-md);
+}
+
+.project--desc span {
+    /* white-space: none; */
+    text-wrap: nowrap;
 }
 
 /* .desc-mobile {
@@ -62,7 +72,7 @@
 }
 
 .read-more--icon {
-    /* font-size: var(--major-2-md); */
+
     width: 16px;
     /* height: 16px; */
 }
