--- a/src/components/home/home.css
+++ b/src/components/home/home.css
@@ -77,6 +77,7 @@
     justify-content: center;
 
     /* transform: rotate(-104deg); */
+    
 }
 
 .cta {
@@ -85,7 +86,7 @@
     left: 50%;
     margin: 0;
     height: 50%;
-    font-size: var(--text-sm);
+    font-size: var(--text-xl);
     font-weight: 500;
     transform-origin: bottom;
 }
@@ -244,6 +245,10 @@
 
     :root {
         --icon-size: 20px;
+    }
+
+    .cta {
+        font-size: var(--text-sm);
     }
 
     .home h1 {
